# ProbabilisticRobotics

./: .gitignore  README.md
ProSlamPresentation/: ProSlamSlides.aux  ProSlamSlides.dvi  ProSlamSlides.nav  ProSlamSlides.tex  ProSlamSlides.toc
ProSlamPresentation/auto/: ProSlamSlides.el
applications/cpp/17b_autodiff/: CMakeLists.txt
applications/cpp/17b_autodiff/src/: CMakeLists.txt  ad_bivariate_test.cpp  ad_multivariate_test.cpp
applications/cpp/24_projective_icp/: CMakeLists.txt  README.md
applications/cpp/24_projective_icp/executables/: CMakeLists.txt  camera_test.cpp  correspondence_finder_test.cpp  picp_complete_test.cpp  picp_solver_test.cpp
applications/cpp/24_projective_icp/src/: camera.cpp  camera.h  defs.h  distance_map_correspondence_finder.cpp  picp_solver.cpp  picp_solver.h  points_utils.cpp  points_utils.h
applications/octave/04_grid_orazio/: drawObservations.m
applications/octave/08_ekf_localization/: EKFLocalization.m  octave-workspace
applications/octave/09_ekf_localization_bearing_only/: ekf_localizer.m
applications/octave/10_ekf_slam/: ekf_slam.m
applications/octave/12_ekf_slam_unknown_association/: ekf_slam.m
applications/octave/14_ukf_localization/: prediction.m
applications/octave/16_particle_localization/: pf_localizer.m
applications/octave/18_alignment_point_to_point_2d/: README.md  common_stuff.m  icp_2d.m  icp_2d_manifold.m
applications/octave/19_odometry_calibration/: LSOdomCalib.m
applications/octave/20_alignment_point_to_point_3d/: ICP_3D_test.m
applications/octave/20b_alignment_point_to_point_3d_linear_relaxation/: ICPTest.m
applications/octave/23_icp_optimization_on_a_manifold/: README.md  icp_3D_manifold.m  icp_3D_nomanifold.m  icp_3D_nomanifold_vs_manifold.m  icp_3D_stats.m
applications/octave/25_multi_point_registration/: README.md
applications/octave/26_total_least_squares/: TotalLeastSquares.m  total_least_squares.m  total_least_squares_landmarks.m
applications/vrep/: orazio_running.ttt
octave-dinies/01_ekf_localization_mine/exercise/: correction.m  prediction.m  transition_model.m
octave-dinies/02_ekf_localization_bearing_only/: EKFLocalizationBearingOnly.m
octave-dinies/02_ekf_localization_bearing_only/exercise/: correction_bearing_only.m  prediction_bearing_only.m  transition_model.m
octave-dinies/04_grid_orazio/: drawOrientation.m  getNextState.m  getObservations.m  grid_orazio.m  observationModel.m  poolingMatrix.m  transitionModel.m
octave-dinies/10_ekf_slam/: correction.m  ekf_slam.m  prediction.m
octave-dinies/12_ekf_slam_unknown_association/: README.md  correction.m  diff_data_association.m  ekf_slam.m  measurement_function.m  octave-workspace  prediction.m
octave-dinies/14_ukf_localization/: compute_sigma_points.m  prediction.m  reconstruct_mean_cov.m
octave-dinies/14_ukf_localization_dinies/: README.md  correction.m  ukf_localization.m
octave-dinies/16_particle_localization/: PFLocalization.m  octave-workspace
octave-dinies/19_odometry_calibration/: LSOdomCalib.m
octave-dinies/20_alignment_point_to_point_3d/: .#icp_3d.m  ICP_3D_test.m  README.md  icp_3d.m  icp_linrel.m
octave-dinies/20b_alignment_point_to_point_3d_linear_relaxation/: ICPTest.m  README.md  icp.m  icp_relaxed.m
octave-dinies/25_multi_point_registration/: MultiICP.m
octave-dinies/26_total_least_squares/: TotalLeastSquares.m  total_least_squares.m  total_least_squares_projections.m
octave-dinies/backup_25_multi_PR/: README.md  multi_ICP_3d.m
octave-dinies/backup_26_TotaLS/: README.md  total_least_squares_poses.m
octave-dinies/cpp/16_thin_localizer/src/: CMakeLists.txt  defs.h  distance_map.cpp  distance_map.h  localizer.cpp  localizer.h  localizer_test.cpp  thin_localizer_node.cpp
octave-dinies/cpp/17a_distance_map/: CMakeLists.txt  Readme.md
octave-dinies/cpp/17a_distance_map/src/: distance_map.cpp  distance_map.h  distance_map_test.cpp
octave-dinies/trials/: try_1.m
xmlDrawings/: dataStucts.xml  triangIntu.xml
(+58 files in other folders)
